Fix container alignment, increase max container size

--- a/assets/scss/bootstrap/_variables.scss
+++ b/assets/scss/bootstrap/_variables.scss
@@ -487,7 +487,8 @@ $grid-breakpoints: (
   md: 768px,
   lg: 992px,
   xl: 1200px,
-  xxl: 1400px
+  xxl: 1400px,
+  xxxl: 1800px
 ) !default;
 // scss-docs-end grid-breakpoints
 
@@ -505,7 +506,8 @@ $container-max-widths: (
   md: 720px,
   lg: 960px,
   xl: 1140px,
-  xxl: 1320px
+  xxl: 1320px,
+  xxxl: 1620px
 ) !default;
 // scss-docs-end container-max-widths
 
