--- a/assets/scss/components/_bento_workspace.scss
+++ b/assets/scss/components/_bento_workspace.scss
@@ -4,10 +4,8 @@
   .container {
     display: flex;
     height: 100%;
-    width: 100%;
     align-items: center;
     justify-content: center;
-    max-width: 1478px;
     flex-wrap: wrap;
   }
 
